--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -180,6 +180,7 @@
   float: right;
   width: 28px;
   height: 28px;
+  background-color: #fff !important;
 
   @media (min-width: 32em) {
     margin: -14px; // half the size
